# Xdocs

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml  (+1 more)
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/admin/: import_pdf.py  schemas.py  service.py
backend/app/analytics/: service.py
backend/app/api/: admin.py  analytics.py  content.py  export.py  health.py  llm.py  me.py  media.py  search.py
backend/app/auth/: deps.py  jwt.py  permissions.py
backend/app/content/: render.py  schemas.py  service.py  slug.py
backend/app/core/: config.py  db.py  errors.py  logging.py
backend/app/export/: pdf.py  schemas.py  service.py
backend/app/llm/: chat.py  embeddings.py  guard.py  schemas.py  service.py
backend/app/models/: __init__.py  content.py  export.py  llm.py  media.py
backend/app/scripts/: seed.py
backend/app/search/: chunking.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_content.py  0003_search.py  0004_llm.py  0005_export.py  0006_media.py  0007_spaces_sections.py  0008_published_snapshot.py
backend/tests/: conftest.py  test_admin_api.py  test_analytics_hardening.py  test_auth.py  test_chunking.py  test_content_api.py  test_embeddings.py  test_export_api.py  test_health.py  test_import_pdf.py  test_llm_api.py  test_media_api.py  test_render.py  test_search_api.py  test_table_prefix.py  test_versions_i18n.py
(+47 files in other folders)
